--- a/server/templates/admin/register.html
+++ b/server/templates/admin/register.html
@@ -3,6 +3,6 @@
 {% block body %}
 
 <h1>Admin  Panel</h1>
-<p>Welcome to Msaada mashinani admin dashboard</p>
+<p>Welcome to Msaada Hub admin dashboard</p>
 <p>Register Admin</p>
 {% endblock %}
