--- a/server/templates/admin/login.html
+++ b/server/templates/admin/login.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h1>Admin  Panel</h1>
-<p>Welcome to Msaada mashinani admin dashboard</p>
+<p>Welcome to  admin dashboard</p>
 <p>Please Login:</p>
 <form method="post">
     <label for="username">Username</label>
